--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "entities": "^1.1.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "gatsby": "^2.13.28",
+    "gatsby": "2.12.0",
     "gatsby-cli": "^2.7.15",
     "gatsby-link": "^2.2.2",
     "gatsby-plugin-create-client-paths": "^2.1.3",
